feat: base code for input validation on account creation page

--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ align-items: center;
 }
 
 .gc-container-img {
-    height: 105vh;
+    height: 120vh;
     width: 50%;
     background-image: url("/images/gc-img-container.png");
     background-color: #ffffff;
@@ -78,21 +78,34 @@ align-items: center;
 
 
 .form{
-    padding: 18px;
+    padding: 15px;
     margin: auto;
 }
 
 
 
 .gc-form-content{
-    margin-bottom: 8px;
-    padding-bottom: 5px;
+    margin: 10px 0 -15px 0;
     position: relative;
     
 }
+
+
 .footer {
 margin: 10px;
 
+}
+
+#bg-a{
+   visibility: visible;
+}
+
+.gc-form-content a {
+    font-size: 0.7em;
+    font-weight: 400;
+    bottom: -3px;
+    left: 0;
+    visibility: hidden;
 }
 
 
@@ -108,7 +121,7 @@ margin: 10px;
     display: block;
     width: 100%;
     height: 20px;
-    padding: 8px 0;
+    padding: 8px 0 8px 2px;
     border-radius: 4.015px;
     border: 0.803px solid rgba(0, 0, 0, 0.16);
     background: rgba(217, 217, 217, 0.36);
@@ -120,7 +133,7 @@ margin: 10px;
     color: #ffffff;
     width: 100%;
     border-radius: 5px;
-    padding: 10px;
+    padding: 15px;
     border: 0;
     cursor: pointer;
     font-size: 12px;
@@ -136,6 +149,16 @@ font-size: 12.122px;
 font-style: normal;
 font-weight: 300;
 line-height: normal;
+margin-top: 25px;
+}
+
+.gc-form-content.error input{
+    border-color: #FB0D05;
+}
+
+.gc-form-content.error a {
+    color: #FB0D05;
+    visibility: visible;
 }
 
 @media only screen and (max-width: 320px){
